added 'command' directive in config files which enables adding custom commands by loading lua scripts at startup

--- a/redis.conf
+++ b/redis.conf
@@ -436,6 +436,16 @@ auto-aof-rewrite-min-size 64mb
 # Set it to 0 or a negative value for unlimited execution without warnings.
 lua-time-limit 5000
 
+# Add custom commands to Redis by specifying a command name and a file path
+# to a lua script that implements the command. The lua command is invoked just
+# as if it had been loaded via EVAL / SCRIPT LOAD.
+#
+# Redis command names must be composed of only ASCII letters A-Z, no numbers or
+# symbols are allowed.
+# You may specify this directive any number of times with different values.
+#
+# command LCONCAT ./scripts/lconcat.lua
+
 ################################## SLOW LOG ###################################
 
 # The Redis Slow Log is a system to log queries that exceeded a specified
